--- a/res/xml/rr_parts.xml
+++ b/res/xml/rr_parts.xml
@@ -103,6 +103,13 @@
         android:summary="@string/rr_ota_fab_summary"
         android:icon="@drawable/rr_fab_enable"
         android:defaultValue="true" />
+
+        <!-- Unlimited google photos storage -->
+    <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+        android:key="use_photos_spoof"
+        android:title="@string/use_photos_spoof_title"
+        android:summary="@string/use_photos_spoof_summary"
+        android:defaultValue="true" />
  </PreferenceCategory>
 </PreferenceScreen>
 
