Try port 'User toggle for StreamProp [2/2]' for RR settings

--- a/res/xml/rr_parts.xml
+++ b/res/xml/rr_parts.xml
@@ -115,6 +115,12 @@
         android:key="use_games_spoof"
         android:title="@string/use_games_spoof_title"
         android:summary="@string/use_games_spoof_summary" />
+        <!-- Unlock higher quality streams for specific apps -->
+    <com.android.settings.rr.Preferences.SystemSettingSwitchPreference
+        android:key="use_stream_spoof"
+        android:title="@string/use_stream_spoof_title"
+        android:summary="@string/use_stream_spoof_summary"
+        android:defaultValue="true" />
  </PreferenceCategory>
 </PreferenceScreen>
 
